--- a/index_mates_discretas.html
+++ b/index_mates_discretas.html
@@ -98,6 +98,11 @@
             font-size: 24px;
             margin-bottom: 20px;
         }
+
+        /* Estilos para el apartado de combinaciones */
+        #combinaciones-apartado {
+            margin-top: 20px;
+        }
     </style>
 </head>
 
@@ -117,6 +122,8 @@
         <div id="contenedor-tabla"></div>
         <!-- Contenedor para la lista de combinaciones -->
         <div id="combinaciones"></div>
+        <!-- Apartado para mostrar el número de combinaciones -->
+        <div id="combinaciones-apartado"></div>
     </div>
 
     <!-- Script JavaScript para la lógica de generación de secuencias -->
@@ -151,6 +158,9 @@
         function generarSecuencia() {
             // Obtener el valor del orden ingresado por el usuario
             const n = parseInt(document.getElementById('orden').value);
+            // Mostrar el número de combinaciones en el apartado correspondiente
+            const combinacionesApartado = document.getElementById('combinaciones-apartado');
+            combinacionesApartado.textContent = `Número de combinaciones: ${Math.pow(2, n)}`;
             // Longitud de la secuencia binaria (0 y 1)
             const k = 2;
             // Alfabeto de la secuencia binaria
